--- a/index.html
+++ b/index.html
@@ -116,18 +116,34 @@ function copyKeyToClipboard(key) {
 
 // Hàm huỷ bản quyền
 async function revokeLicense(key) {
-  if(confirm("Bạn có chắc chắn muốn huỷ bản quyền cho mã: " + key + "?\n\nMã này sẽ trở về trạng thái chưa sử dụng. Người dùng sẽ mất quyền sử dụng khi họ đăng nhập lại.")) {
+  if (confirm("Bạn có chắc chắn muốn huỷ bản quyền cho mã: " + key + "?\n\nNgười dùng sẽ mất quyền sử dụng khi họ đăng nhập lại.")) {
     try {
-      // Chỉ cập nhật licenseKeys, không cập nhật users
-      await database.ref('licenseKeys/' + key).update({
-        used: false
+      // 1. Lấy thông tin của key để xác định người dùng
+      const licenseRef = database.ref('licenseKeys/' + key);
+      const snapshot = await licenseRef.once('value');
+      const licenseData = snapshot.val();
+
+      if (licenseData && licenseData.usedBy) {
+        // 2. Cập nhật trạng thái licensed: false cho người dùng tương ứng
+        const userRef = database.ref('users/' + licenseData.usedBy + '/license');
+        await userRef.update({
+          licensed: false
+        });
+      }
+
+      // 3. Cập nhật trạng thái used: false cho key
+      await licenseRef.update({
+        used: false,
+        usedAt: null,
+        usedBy: null,
+        usedByEmail: null
       });
 
-      alert("Đã huỷ bản quyền cho mã: " + key + "\n\nLưu ý: Người dùng cần đăng nhập lại để hệ thống cập nhật trạng thái.");
+      alert("Đã huỷ bản quyền thành công cho mã: " + key);
       loadKeys();
     } catch (error) {
       console.error("Lỗi khi huỷ bản quyền:", error);
-      alert("Có lỗi xảy ra khi huỷ bản quyền: " + error.message);
+      alert("Đã xảy ra lỗi: " + error.message);
     }
   }
 }
