--- a/index.html
+++ b/index.html
@@ -114,18 +114,51 @@ function copyKeyToClipboard(key) {
 }
 
 // Hàm huỷ bản quyền
-function revokeLicense(key) {
-  if(confirm("Bạn có chắc chắn muốn huỷ bản quyền cho mã: " + key + "?\n\nMã này sẽ trở về trạng thái chưa sử dụng và có thể cấp lại cho người khác.")) {
-    database.ref('licenseKeys/'+key).update({
-      used: false
-      // Giữ nguyên các trường usedAt, usedBy, usedByEmail để theo dõi lịch sử
-    }).then(() => {
-      alert("Đã huỷ bản quyền cho mã: " + key);
+// Hàm huỷ bản quyền
+async function revokeLicense(key) {
+  if (confirm("Bạn có chắc chắn muốn huỷ bản quyền cho mã: " + key + "?\n\nNgười dùng sẽ mất quyền sử dụng khi họ đăng nhập lại.")) {
+    try {
+      // 1. Lấy thông tin của key để xác định người dùng
+      const licenseRef = database.ref('licenseKeys/' + key);
+      const snapshot = await licenseRef.once('value');
+      const licenseData = snapshot.val();
+
+      if (licenseData && licenseData.usedBy) {
+        // 2. Cập nhật trạng thái licensed: false cho người dùng tương ứng
+        const userRef = database.ref('users/' + licenseData.usedBy + '/license');
+        await userRef.update({
+          licensed: false,
+          key: null, // Xóa key khỏi thông tin user
+          activatedAt: null // Xóa thời gian kích hoạt
+        });
+        
+        // 3. Cập nhật stats nếu cần
+        const statsRef = database.ref('stats');
+        const statsSnapshot = await statsRef.once('value');
+        const currentStats = statsSnapshot.val() || {};
+        
+        // Giảm số lượng licensed users nếu có
+        if (currentStats.licensedUsersCount && currentStats.licensedUsersCount > 0) {
+          await statsRef.update({
+            licensedUsersCount: currentStats.licensedUsersCount - 1
+          });
+        }
+      }
+
+      // 4. Cập nhật trạng thái used: false cho key
+      await licenseRef.update({
+        used: false,
+        usedAt: null,
+        usedBy: null,
+        usedByEmail: null
+      });
+
+      alert("Đã huỷ bản quyền thành công cho mã: " + key);
       loadKeys();
-    }).catch(error => {
+    } catch (error) {
       console.error("Lỗi khi huỷ bản quyền:", error);
-      alert("Có lỗi xảy ra khi huỷ bản quyền");
-    });
+      alert("Đã xảy ra lỗi: " + error.message);
+    }
   }
 }
 
